--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "build19": "cd demo19_mock && webpack -p",
     "start20": "cd demo20_proxy && webpack-dev-server --progress | node app.js",
     "build20": "cd demo20_proxy && webpack -p",
+    "start21": "cd demo21_SRI && webpack-dev-server --progress --open",
+    "build21": "cd demo21_SRI && webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -79,6 +81,7 @@
     "bundle-loader": "^0.5.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-subresource-integrity": "^1.3.2"
   }
 }
