--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "build20": "cd demo20_proxy && webpack -p",
     "start21": "cd demo21_SRI && webpack-dev-server --progress --open",
     "build21": "cd demo21_SRI && webpack -p",
+    "start22": "cd demo22_less && webpack-dev-server --progress --open",
+    "build22": "cd demo22_less && webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -59,6 +61,8 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
