--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "build21": "cd demo21_SRI && webpack -p",
     "start22": "cd demo22_less && webpack-dev-server --progress --open",
     "build22": "cd demo22_less && webpack -p",
+    "start23": "cd demo23_less_cssmodule && webpack-dev-server --progress --open",
+    "build23": "cd demo23_less_cssmodule && webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
