--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "start23": "cd demo23_less_cssmodule && webpack-dev-server --progress --open",
     "build23": "cd demo23_less_cssmodule && webpack -p",
     "build24": "cd demo24_multi_js_html && webpack -p",
+    "build25": "cd demo25_cdn && webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
